force-app/main/default/objects/Participation_of_a_war_volunteer__c/Participation_of_a_war_volunteer__c.object-meta.xml
<CustomObject>
    <label>Participation of a war volunteer</label>
    <nameField>
        <displayFormat>WarV-{0000}</displayFormat>
        <label>Participation of a war volunteer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participation of a war volunteer</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>