force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Abroad_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Abroad_Volunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abroad Volunteer</label>
    <type>Checkbox</type>
</CustomField>