force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Absorption_center_1st__c.field-meta.xml
<CustomField>
    <fullName>Absorption_center_1st__c</fullName>
    <inlineHelpText>שם מרכז קליטה ראשון</inlineHelpText>
    <label>Absorption center 1st</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>אביה</fullName>
            </value>
            <value>
                <fullName>איבים</fullName>
            </value>
            <value>
                <fullName>אלטשולר</fullName>
            </value>
            <value>
                <fullName>בית קנדה</fullName>
            </value>
            <value>
                <fullName>ברנע</fullName>
            </value>
            <value>
                <fullName>חרוב</fullName>
            </value>
            <value>
                <fullName>יעלים</fullName>
            </value>
            <value>
                <fullName>כלנית</fullName>
            </value>
            <value>
                <fullName>נורית</fullName>
            </value>
            <value>
                <fullName>ערד</fullName>
            </value>
            <value>
                <fullName>קלישר</fullName>
            </value>
            <value>
                <fullName>שושנה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>