force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Participation of a war volunteer</relationshipLabel>
    <relationshipName>Participation_of_a_war_volunteer</relationshipName>
    <type>Lookup</type>
</CustomField>