force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Additional_languages__c.field-meta.xml
<CustomField>
    <fullName>Additional_languages__c</fullName>
    <label>Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Amharic</fullName>
            </value>
            <value>
                <fullName>Hebrew</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>