force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Are_you_mobile__c.field-meta.xml
<CustomField>
    <fullName>Are_you_mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you mobile</label>
    <type>Checkbox</type>
</CustomField>