force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/City_of_residence__c.field-meta.xml
<CustomField>
    <fullName>City_of_residence__c</fullName>
    <label>City of residence</label>
    <type>TextArea</type>
</CustomField>