force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participation of a war volunteer</relationshipLabel>
    <relationshipName>Participation_of_a_war_volunteer</relationshipName>
    <type>Lookup</type>
</CustomField>