force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Date_of_volunteering_1st__c.field-meta.xml
<CustomField>
    <fullName>Date_of_volunteering_1st__c</fullName>
    <inlineHelpText>תאריך תחילת ההתנדבות - ראשון</inlineHelpText>
    <label>Start date of volunteering 1st</label>
    <type>Date</type>
</CustomField>