force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Date_of_volunteering_2nd__c.field-meta.xml
<CustomField>
    <fullName>Date_of_volunteering_2nd__c</fullName>
    <inlineHelpText>תאריך תחילת ההתנדבות - שני</inlineHelpText>
    <label>Start date of volunteering 2nd</label>
    <type>Date</type>
</CustomField>