force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Driving_License__c.field-meta.xml
<CustomField>
    <fullName>Driving_License__c</fullName>
    <label>Driving License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>