force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Employee_of_organization__c.field-meta.xml
<CustomField>
    <fullName>Employee_of_organization__c</fullName>
    <inlineHelpText>במידה והנך עובד/ת</inlineHelpText>
    <label>Employee of organization</label>
    <type>TextArea</type>
</CustomField>