force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/End_date_of_volunteering_1st__c.field-meta.xml
<CustomField>
    <fullName>End_date_of_volunteering_1st__c</fullName>
    <inlineHelpText>תאריך סיום ההתנדבות - ראשון</inlineHelpText>
    <label>End date of volunteering 1st</label>
    <type>Date</type>
</CustomField>