force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/End_date_of_volunteering_2nd__c.field-meta.xml
<CustomField>
    <fullName>End_date_of_volunteering_2nd__c</fullName>
    <inlineHelpText>תאריך סיום ההתנדבות - שני</inlineHelpText>
    <label>End date of volunteering 2nd</label>
    <type>Date</type>
</CustomField>