force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/English_Level__c.field-meta.xml
<CustomField>
    <fullName>English_Level__c</fullName>
    <label>English - Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Fluent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>