force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <label>First name</label>
    <type>TextArea</type>
</CustomField>