force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/GDPR_Approval__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Accept privacy policy:
https://www.jewishagency.org/privacy-policy</inlineHelpText>
    <label>GDPR Approval</label>
    <type>Checkbox</type>
</CustomField>