force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/GDPR_approval_date__c.field-meta.xml
<CustomField>
    <fullName>GDPR_approval_date__c</fullName>
    <label>GDPR approval date</label>
    <type>DateTime</type>
</CustomField>