force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/GDPR_Approval_Source__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Approval_Source__c</fullName>
    <label>GDPR Approval Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>