force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Israeli_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Israeli_ID_Number__c</fullName>
    <label>Israeli ID Number</label>
    <type>TextArea</type>
</CustomField>