force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Location_1st__c.field-meta.xml
<CustomField>
    <fullName>Location_1st__c</fullName>
    <inlineHelpText>מיקום ראשון</inlineHelpText>
    <label>Location 1st</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>אחר</fullName>
            </value>
            <value>
                <fullName>חיפה</fullName>
                <isActive>false</isActive>
                <label>חיפה</label>
            </value>
            <value>
                <fullName>ירושלים</fullName>
                <isActive>false</isActive>
                <label>ירושלים</label>
            </value>
            <value>
                <fullName>מסע</fullName>
            </value>
            <value>
                <fullName>מרכז קליטה</fullName>
            </value>
            <value>
                <fullName>מתקן קליטה</fullName>
            </value>
            <value>
                <fullName>עמיגור</fullName>
            </value>
            <value>
                <fullName>קרן נפגעי טרור</fullName>
            </value>
            <value>
                <fullName>ראשון לציון</fullName>
                <isActive>false</isActive>
                <label>ראשון לציון</label>
            </value>
            <value>
                <fullName>תל אביב</fullName>
                <isActive>false</isActive>
                <label>תל אביב</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>