force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Medical_Volunteer_2nd_form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Medical_Volunteer_2nd_form_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Volunteer 2nd form Sent</label>
    <type>Checkbox</type>
</CustomField>