force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Medical_Volunteer_2nd_form_Sent_date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Volunteer_2nd_form_Sent_date__c</fullName>
    <label>Medical Volunteer 2nd form Sent date</label>
    <type>DateTime</type>
</CustomField>