force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Participation of a war volunteer</relationshipLabel>
    <relationshipName>Participation_of_a_war_volunteer</relationshipName>
    <type>Lookup</type>
</CustomField>