force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Other_Language__c.field-meta.xml
<CustomField>
    <fullName>Other_Language__c</fullName>
    <inlineHelpText>שפה נוספת שאינה נמצאת ברשימה</inlineHelpText>
    <label>Other language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>