force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Other_Place_1st__c.field-meta.xml
<CustomField>
    <fullName>Other_Place_1st__c</fullName>
    <inlineHelpText>מיקום אחר ראשון</inlineHelpText>
    <label>Other Place 1st</label>
    <type>TextArea</type>
</CustomField>