force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Other_Place_2nd__c.field-meta.xml
<CustomField>
    <fullName>Other_Place_2nd__c</fullName>
    <inlineHelpText>מיקום אחר שני</inlineHelpText>
    <label>Other Place 2nd</label>
    <type>TextArea</type>
</CustomField>