force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <inlineHelpText>מספר דרכון</inlineHelpText>
    <label>Passport Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>