force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Period_of_stay_in_the_country__c.field-meta.xml
<CustomField>
    <fullName>Period_of_stay_in_the_country__c</fullName>
    <label>Period of stay in the country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Two weeks</fullName>
            </value>
            <value>
                <fullName>A month</fullName>
            </value>
            <value>
                <fullName>More</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>