force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Personal_weapon__c.field-meta.xml
<CustomField>
    <fullName>Personal_weapon__c</fullName>
    <inlineHelpText>האם נושא/ת נשק אישי?</inlineHelpText>
    <label>Personal weapon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>