force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <type>TextArea</type>
</CustomField>