force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Profession_specialty__c.field-meta.xml
<CustomField>
    <fullName>Profession_specialty__c</fullName>
    <label>Profession specialty</label>
    <type>TextArea</type>
</CustomField>