force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Profession_specialty_other__c.field-meta.xml
<CustomField>
    <fullName>Profession_specialty_other__c</fullName>
    <inlineHelpText>מקצוע שאינו ברשימה</inlineHelpText>
    <label>Profession specialty - other</label>
    <type>TextArea</type>
</CustomField>