force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Settlement_1st__c.field-meta.xml
<CustomField>
    <fullName>Settlement_1st__c</fullName>
    <inlineHelpText>יישוב ראשון</inlineHelpText>
    <label>Settlement 1st</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>אופקים</fullName>
            </value>
            <value>
                <fullName>אשדוד</fullName>
            </value>
            <value>
                <fullName>אשקלון</fullName>
            </value>
            <value>
                <fullName>באר שבע</fullName>
            </value>
            <value>
                <fullName>בית שאן</fullName>
            </value>
            <value>
                <fullName>בת ים</fullName>
            </value>
            <value>
                <fullName>הרצליה</fullName>
            </value>
            <value>
                <fullName>חולון</fullName>
            </value>
            <value>
                <fullName>חיפה</fullName>
            </value>
            <value>
                <fullName>ירושלים</fullName>
            </value>
            <value>
                <fullName>לוד</fullName>
            </value>
            <value>
                <fullName>ניצנה</fullName>
            </value>
            <value>
                <fullName>ניר עציון</fullName>
            </value>
            <value>
                <fullName>נתניה</fullName>
            </value>
            <value>
                <fullName>עין חרוד</fullName>
            </value>
            <value>
                <fullName>ערד</fullName>
            </value>
            <value>
                <fullName>קרית אונו</fullName>
            </value>
            <value>
                <fullName>קרית גת</fullName>
            </value>
            <value>
                <fullName>ראשון לציון</fullName>
            </value>
            <value>
                <fullName>רחובות</fullName>
            </value>
            <value>
                <fullName>רמת גן</fullName>
            </value>
            <value>
                <fullName>רעננה</fullName>
            </value>
            <value>
                <fullName>שער הנגב</fullName>
            </value>
            <value>
                <fullName>שפיים</fullName>
            </value>
            <value>
                <fullName>תל אביב</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>