force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Shaliach__c.field-meta.xml
<CustomField>
    <fullName>Shaliach__c</fullName>
    <label>Shaliach hozer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>שליחות ארוכה</fullName>
            </value>
            <value>
                <fullName>שליחות קצרה</fullName>
            </value>
            <value>
                <fullName>חניך במכינה של הסוכנות היהודית</fullName>
            </value>
            <value>
                <fullName>בוגר מכינה של הסוכנות היהודית</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>