force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>תיעוד מקור הזנה</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>