force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/Specialization_details__c.field-meta.xml
<CustomField>
    <fullName>Specialization_details__c</fullName>
    <description>פירוט הכשרה/ כיצד תוכל/י לסייע?</description>
    <inlineHelpText>פירוט הכשרה/ כיצד תוכל/י לסייע?</inlineHelpText>
    <label>Specialization details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>