force-app/main/default/objects/Participation_of_a_war_volunteer__c/fields/The_organization_name__c.field-meta.xml
<CustomField>
    <fullName>The_organization_name__c</fullName>
    <inlineHelpText>שם חברת הבת</inlineHelpText>
    <label>The organization name</label>
    <type>TextArea</type>
</CustomField>