force-app/main/default/objects/Participation_of_a_war_volunteer__c/recordTypes/Volunteers_abroad.recordType-meta.xml
<RecordType>
    <fullName>Volunteers_abroad</fullName>
    <active>true</active>
    <description>מתנדבי חו&quot;ל</description>
    <label>Volunteers abroad</label>
</RecordType>