force-app/main/default/objects/Participation_of_a_war_volunteer__c/recordTypes/Volunteers_Israel.recordType-meta.xml
<RecordType>
    <fullName>Volunteers_Israel</fullName>
    <active>true</active>
    <description>מתנדבים ישראלים</description>
    <label>Volunteers Israel</label>
</RecordType>