force-app/main/default/objects/Participation_of_a_war_volunteer__c/listViews/Abroad.listView-meta.xml
<ListView>
    <fullName>Abroad</fullName>
    <columns>NAME</columns>
    <columns>First_name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Mobile_Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Participation_of_a_war_volunteer__c.Volunteers_abroad</value>
    </filters>
    <label>Abroad</label>
    <sharedTo>
        <group>War_Abroad</group>
    </sharedTo>
</ListView>