force-app/main/default/objects/Participation_of_a_war_volunteer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Mobile_Phone__c</columns>
    <columns>Israeli_ID_Number__c</columns>
    <columns>Are_you_mobile__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>